--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up Form</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class=""></div>
-        <div class=""></div>
+      <div class="main">
+            <div class="transparent">
+                <div class="logoOdin">
+                    <img src="./assets/odin-logo.png" alt="logo odin" id="odin" />
+                    <span>ODIN</span>
+                </div>
+            </div>
+      </div>
+      <div class="form"><h1>EU SOU UM FORM</h1></div>
     </div>
-</body>
+  </body>
 </html>
